# Arcade

./: .gitignore  CMakeLists.txt  IDisplayModule.hpp  README.md  bar.cpp  debug.sh  foo.cpp  gra.cpp  main.c  main.cpp  rebuild.sh
.github/workflows/: ci.yml
archiArcadeV1/src/: main.cpp
doc_doxygen/html/: ADisplayModule_8cpp.html  ADisplayModule_8hpp.html  ADisplayModule_8hpp_source.html  AGameModule_8cpp.html  AGameModule_8hpp.html  AGameModule_8hpp_source.html  CoreModule_8cpp.html  CoreModule_8hpp.html  CoreModule_8hpp_source.html  DLLoader_8hpp.html  DLLoader_8hpp_source.html  ErrorHandling_8cpp.html  IModule_8hpp.html  IModule_8hpp_source.html  Macros_8hpp.html  Macros_8hpp_source.html  Main_8cpp.html  NCurses_8cpp.html  NCurses_8hpp.html  NCurses_8hpp_source.html  Pacman_8cpp.html  Pacman_8hpp.html  Pacman_8hpp_source.html  Sdl2_8cpp.html  Sdl2_8hpp.html  Sdl2_8hpp_source.html  Sfml_8cpp.html  Sfml_8hpp.html  Sfml_8hpp_source.html  Snake_8cpp.html  Snake_8hpp.html  Snake_8hpp_source.html  annotated.html  classDLLoader-members.html  classDLLoader.html  classarcade_1_1ADisplayModule-members.html  classarcade_1_1ADisplayModule.html  classarcade_1_1AGameModule-members.html  classarcade_1_1AGameModule.html  classarcade_1_1CoreModule-members.html  (+44 more)
doc_doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_16.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  (+43 more)
doc_doxygen/latex/: ADisplayModule_8cpp.tex  ADisplayModule_8hpp.tex  ADisplayModule_8hpp_source.tex  AGameModule_8cpp.tex  AGameModule_8hpp.tex  AGameModule_8hpp_source.tex  CoreModule_8cpp.tex  CoreModule_8hpp.tex  CoreModule_8hpp_source.tex  DLLoader_8hpp.tex  DLLoader_8hpp_source.tex  ErrorHandling_8cpp.tex  IModule_8hpp.tex  IModule_8hpp_source.tex  Macros_8hpp.tex  Macros_8hpp_source.tex  Main_8cpp.tex  NCurses_8cpp.tex  NCurses_8hpp.tex  NCurses_8hpp_source.tex  Pacman_8cpp.tex  Pacman_8hpp.tex  Pacman_8hpp_source.tex  Sdl2_8cpp.tex  Sdl2_8hpp.tex  Sdl2_8hpp_source.tex  Sfml_8cpp.tex  Sfml_8hpp.tex  Sfml_8hpp_source.tex  Snake_8cpp.tex  Snake_8hpp.tex  Snake_8hpp_source.tex  annotated.tex  classDLLoader.tex  classarcade_1_1ADisplayModule.eps  classarcade_1_1ADisplayModule.tex  classarcade_1_1AGameModule.eps  classarcade_1_1AGameModule.tex  classarcade_1_1CoreModule.eps  classarcade_1_1CoreModule.tex  (+32 more)
docs/: Doxyfile.in
include/: Arcade.hpp  CoreModule.hpp  DLLoader.hpp  ICoreModule.hpp  IModule.hpp
include/ErrorHandling/: ErrorHandling.hpp
include/game/: AGameModule.hpp  IGameModule.hpp  Pacman.hpp  Snake.hpp
include/graphic/: ADisplayModule.hpp  IDisplayModule.hpp  NCurses.hpp  SDL2.hpp  Sdl2.hpp  Sfml.hpp
interface/: CMakeLists.txt
interface/include/: Arcade.hpp  CoreModule.hpp  DLLoader.hpp  ErrorHandling.hpp  Macros.hpp  Shell.hpp  proto.hpp
interface/include/arcade/: ICoreModule.hpp  IDisplayModule.hpp  IGameModule.hpp  IShell.hpp
lib/: CoreModule.cpp
lib/games/: AGameModule.cpp  AGameModule.hpp  CMakeLists.txt
lib/games/pacman/: CMakeLists.txt  Pacman.cpp  Pacman.hpp
lib/games/snake/: CMakeLists.txt  Snake.cpp  Snake.hpp
lib/graphics/: ADisplayModule.cpp  ADisplayModule.hpp  CMakeLists.txt
lib/graphics/ncurses/: CMakeLists.txt  NCurses.cpp  NCurses.hpp
lib/graphics/sdl2/: CMakeLists.txt  SDL2.cpp  Sdl2.cpp  Sdl2.hpp
lib/graphics/sfml/: CMakeLists.txt  Sfml.cpp  Sfml.hpp
saves/: arcade_pacman.txt  arcade_snake.txt
src/: CMakeLists.txt  CoreModule.cpp  ErrorHandling.cpp  Main.cpp  main.cpp
src/core_program/: launch_arcade.cpp
